--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     width: 100%;
     height: 18vh;
     display: flex;
-    padding: 20px 2px 0px 25px;
+    padding: 20px 2px 90px 25px;
 }
 .nav-bar-decription{
     width: 10%;
@@ -127,4 +127,74 @@ span{
     padding-top: 40px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
+}
+.container-cont{
+    background: rgba(0, 0, 0, 0.685);
+    height: 90vh;
+    padding-top: 100px;
+    padding-left: 340px;
+   
+
+
+}
+.contact-container{
+    width: 55%;
+    height: 65vh;
+    background: rgba(241, 240, 240, 0.158);
+    margin-left: 50px;
+    border-radius: 25px;
+    text-align: center;
+    padding-top: 5px;
+    color: white;
+    font-size: 20px;
+    box-shadow: 0px 0-px 3px 3px rgb(94, 62, 3);
+    padding: 15px;
+    padding-right: 20px;
+  
+    
+}
+
+.row{
+    display: flex;
+    padding-top: 20px;
+}
+.col1{
+    width: 60%;
+    margin-bottom: 10px;
+
+}
+.col1 i{
+    float: left;
+   margin-left: 30px;
+ 
+}
+.col2{
+    width: 50%;
+    height: 40vh;
+    background: white;
+    transition: transform .5s;
+    border-radius: 15px;
+}
+
+.col2:hover{
+    transform: scale(1.1);
+}
+.col2 input{
+box-shadow:  0px 2px rgb(87, 57, 3);
+opacity: 0.7;
+border: none;
+margin-bottom: 25px;
+height: 20px;
+
+   
+}
+.col2 button{
+    width: 25%;
+    border-radius: 5px;
+    box-shadow: 0px 2px rgb(95, 63, 3);
+}
+.col2 h1{
+    color: black;
+    font-size: 30px;
+    margin-bottom: 30px;
 }
